# XO-Clash

./: .env  .gitignore  Leaderboard.html  README.md  db_mongo.py  db_mysql.py  game.html  game.js  game.py  leaderboard.html  leaderboard.js  lobby.html  lobby.js  login.html  login.js  main.js  main.py  profile.html  profile.js  pyproject.toml  requirements.txt  scheme.py  settings.html  settings.js  style.css  web_scraper.py
