[project]
name = "project"
version = "0.1.0"
description = "CS6.201 Identity-Verified Multiplayer Arena"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "cryptography>=46.0.7",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "setuptools<71.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }